# crowdcode-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CODEBASE.md  LICENSE  PAYMENTS.md  PHASE_2_DESIGN.md  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml  render.yaml
frontend/: SKILL.md  app.js  index.html  styles.css
hermes/crowdcode/: SKILL.md
scripts/: backfill_redaction.py  generate_vectors.py  serve-frontend.mjs
services/redactor/: package.json  server.mjs
skills/crowdcode/: SKILL.md
spec/: CANONICAL_PAYLOAD.md  review-payload-vectors.json
src/crowdcode/: __init__.py  db.py  identity.py  payments.py  redaction.py  scoring.py  server.py  settings.py
supabase/: schema.sql  seed.sql
tests/: test_canonical_vectors.py  test_payments.py  test_redaction_client.py  test_review_flow.py
