[project]
name = "crowdcode-mcp"
version = "0.1.0"
description = "CrowdCode MCP server: payment-gated service reviews for agent commerce."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "eth-account>=0.13.0",
  "httpx>=0.27.0",
  "mcp[cli]>=1.23.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.0",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
crowdcode-mcp = "crowdcode.server:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crowdcode"]
